# lek12

./: CMakeLists.txt  main.cpp
